[package]
name = "timer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "~0.2"
chrono = { version = "~0.4", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
sqlx = { vercion = "~0.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "~1.9", features = ["full"] }
uuid = { version = "~0.8", features = ["serde"] }
