[package]
name = "timer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "~0.2"
chrono = { version = "~0.4", features = ["serde"] }
eyre = "~0.6"
http = "~0.2"
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"
sqlx = { version = "~0.5", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
structopt = "~0.3"
tokio = { version = "~1.9", features = ["full"] }
tower = "~0.4"
tower-http = { version = "~0.1", features = ["trace"] }
typed-builder = "~0.9"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
uuid = { version = "~0.8", features = ["serde"] }
kafka = { version = "~0.27", package = "rdkafka" }
